# Swerve-Platform

./: .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt
src/PlatformApp/: CMakeLists.txt  PlatformApp.cpp  PlatformApp.h
src/SDL2/: Android.mk  CMakeLists.txt  CREDITS.txt  INSTALL.txt  LICENSE.txt  SDL2.spec  WhatsNew.txt  configure.ac  sdl2-config.cmake.in
src/SDL2/Xcode-iOS/Demos/src/: accelerometer.c  keyboard.c
src/SDL2/Xcode-iOS/Test/: README
src/SDL2/Xcode/SDL/pkg-support/: SDL.info
src/SDL2/acinclude/: libtool.m4
src/SDL2/android-project/app/: build.gradle
src/SDL2/build-scripts/: winrtbuild.ps1
src/SDL2/docs/: README-android.md  README-cmake.md  README-directfb.md  README-ios.md  README-linux.md  README-macos.md  README-psp.md  README-raspberrypi.md  README-visualc.md  README-vita.md  README-windows.md  README-winrt.md  README.md
src/SDL2/include/: SDL_haptic.h  SDL_hints.h  SDL_main.h  SDL_opengl.h  SDL_render.h  SDL_sensor.h  SDL_system.h  SDL_test_memory.h
src/SDL2/src/: SDL_dataqueue.c  SDL_log.c
src/SDL2/src/audio/: SDL_audio.c  SDL_audiocvt.c
src/SDL2/src/audio/aaudio/: SDL_aaudio.h
src/SDL2/src/audio/android/: SDL_androidaudio.c
src/SDL2/src/audio/jack/: SDL_jackaudio.c
src/SDL2/src/audio/nacl/: SDL_naclaudio.c
src/SDL2/src/audio/nas/: SDL_nasaudio.c
src/SDL2/src/audio/pipewire/: SDL_pipewire.c
src/SDL2/src/audio/wasapi/: SDL_wasapi.c  SDL_wasapi_win32.c
src/SDL2/src/audio/winmm/: SDL_winmm.c
src/SDL2/src/core/android/: SDL_android.c
src/SDL2/src/core/freebsd/: SDL_evdev_kbd_default_keyaccmap.h  SDL_evdev_kbd_freebsd.c
src/SDL2/src/core/linux/: SDL_dbus.c  SDL_dbus.h  SDL_evdev.c  SDL_evdev_kbd.c  SDL_evdev_kbd_default_keymap.h  SDL_ibus.c  SDL_ibus.h  SDL_udev.h
src/SDL2/src/core/winrt/: SDL_winrtapp_direct3d.cpp  SDL_winrtapp_direct3d.h
src/SDL2/src/cpuinfo/: SDL_cpuinfo.c
src/SDL2/src/events/: SDL_keyboard.c  SDL_mouse.c  scancodes_windows.h
src/SDL2/src/haptic/: SDL_haptic.c
src/SDL2/src/haptic/android/: SDL_syshaptic.c
src/SDL2/src/haptic/darwin/: SDL_syshaptic.c
src/SDL2/src/haptic/linux/: SDL_syshaptic.c
src/SDL2/src/hidapi/android/: hid.cpp
src/SDL2/src/hidapi/ios/: hid.m
src/SDL2/src/hidapi/mac/: hid.c
src/SDL2/src/hidapi/windows/: hid.c
src/SDL2/src/joystick/: SDL_gamecontroller.c  controller_type.h  sort_controllers.py
src/SDL2/src/joystick/android/: SDL_sysjoystick.c  SDL_sysjoystick_c.h
src/SDL2/src/joystick/darwin/: SDL_iokitjoystick.c
src/SDL2/src/joystick/hidapi/: SDL_hidapi_ps4.c  SDL_hidapi_ps5.c  SDL_hidapi_rumble.c  SDL_hidapi_steam.c  SDL_hidapi_switch.c  SDL_hidapijoystick.c
src/SDL2/src/joystick/linux/: SDL_sysjoystick.c
src/SDL2/src/joystick/virtual/: SDL_virtualjoystick.c
src/SDL2/src/joystick/windows/: SDL_rawinputjoystick.c  SDL_xinputjoystick.c
src/SDL2/src/libm/: math_libm.h
src/SDL2/src/main/haiku/: SDL_BApp.h
src/SDL2/src/main/nacl/: SDL_nacl_main.c
src/SDL2/src/render/: SDL_render.c  SDL_yuv_sw.c
src/SDL2/src/render/direct3d/: SDL_render_d3d.c
src/SDL2/src/render/direct3d11/: SDL_render_d3d11.c  SDL_shaders_d3d11.c
src/SDL2/src/render/metal/: SDL_render_metal.m
src/SDL2/src/render/opengl/: SDL_render_gl.c  SDL_shaders_gl.c
src/SDL2/src/render/opengles2/: SDL_render_gles2.c
src/SDL2/src/render/vitagxm/: SDL_render_vita_gxm_shaders.h
src/SDL2/src/sensor/android/: SDL_androidsensor.c
src/SDL2/src/sensor/coremotion/: SDL_coremotionsensor.m
src/SDL2/src/sensor/dummy/: SDL_dummysensor.c
src/SDL2/src/stdlib/: SDL_getenv.c  SDL_string.c
src/SDL2/src/test/: SDL_test_common.c  SDL_test_compare.c  SDL_test_font.c  SDL_test_harness.c  SDL_test_memory.c
src/SDL2/src/thread/pthread/: SDL_systhread.c
src/SDL2/src/timer/unix/: SDL_systimer.c
src/SDL2/src/timer/windows/: SDL_systimer.c
src/SDL2/src/video/: SDL_blit_A.c  SDL_blit_N.c  SDL_egl.c  SDL_egl_c.h  SDL_fillrect.c  SDL_stretch.c  SDL_surface.c  SDL_sysvideo.h  SDL_video.c  SDL_yuv.c  sdlgenblit.pl
src/SDL2/src/video/android/: SDL_androidwindow.h
src/SDL2/src/video/cocoa/: SDL_cocoaevents.m  SDL_cocoametalview.m  SDL_cocoaopengl.m  SDL_cocoaopengles.m  SDL_cocoawindow.m
src/SDL2/src/video/emscripten/: SDL_emscriptenopengles.c
src/SDL2/src/video/haiku/: SDL_BWin.h  SDL_bclipboard.cc  SDL_bframebuffer.cc  SDL_bmodes.cc  SDL_bvideo.cc  SDL_bwindow.cc
src/SDL2/src/video/kmsdrm/: SDL_kmsdrmmouse.c  SDL_kmsdrmmouse.h  SDL_kmsdrmvideo.c  SDL_kmsdrmvideo.h  SDL_kmsdrmvulkan.c
src/SDL2/src/video/nacl/: SDL_naclopengles.c  SDL_naclvideo.c  SDL_naclvideo.h  SDL_naclwindow.c
src/SDL2/src/video/os2/: SDL_os2messagebox.c
src/SDL2/src/video/raspberry/: SDL_rpievents.c  SDL_rpimouse.c  SDL_rpivideo.c  SDL_rpivideo.h
src/SDL2/src/video/uikit/: SDL_uikitmetalview.h  SDL_uikitmetalview.m
src/SDL2/src/video/vita/: SDL_vitagl.c  SDL_vitakeyboard.c  SDL_vitamouse.c  SDL_vitatouch.c
src/SDL2/src/video/wayland/: SDL_waylanddatamanager.c  SDL_waylanddatamanager.h  SDL_waylanddyn.c  SDL_waylandmouse.c  (+2 more)
src/SDL2/test/: CMakeLists.txt  Makefile.in  controllermap.c  loopwavequeue.c  testautomation_audio.c  testautomation_hints.c  testautomation_platform.c  testautomation_render.c  testautomation_sdltest.c  testautomation_stdlib.c  testautomation_video.c  testcustomcursor.c  testdraw2.c  testdrawchessboard.c  testgeometry.c  testgl2.c  testgles.c  testgles2.c  testgles2_sdf.c  testhaptic.c  testhotplug.c  testmultiaudio.c  testplatform.c  testviewport.c  testwm2.c  testyuv.c
src/SerialLineSensor/: CMakeLists.txt  SerialLineSensor.cpp  SerialLineSensor.h
src/SwervePlatform/: CMakeLists.txt  SwervePlatform.cpp  SwervePlatform.h  SwervePlatform.inc
src/SwervePlatformHomingStorage/: CMakeLists.txt  SwervePlatformHomingStorage.cpp  SwervePlatformHomingStorage.h
src/XBoxController/: CMakeLists.txt  XBoxController.cpp  XBoxController.h
src/argosLib/: CMakeLists.txt
src/argosLib/cpp/general/: swerveUtils.cpp
src/ctre/: CMakeLists.txt  README.md
src/ctre/include/: README.md
src/ctre/include/ctre/: Phoenix.h
src/wpi/: CMakeLists.txt  README.md
(+125 files in other folders)
